Djangoアプリを作成した

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 #static/audio/separate
 db.sqlite3
 .vscode
-venv/
 ### Django ###
 __pycache__
 
 staticfiles
 config/local_settings.py
 db.sqlite3
+
+*.pyc
+venv
